--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ main {
 }
 
 
+/* ----------------------------------------- */
+
 .tela__home {
     display: flex;
     position: relative;
@@ -56,6 +58,8 @@ main {
 }
 
 
+/* ----------------------------------------------------- */
+
 .lista__parceiros {
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -76,6 +80,7 @@ main {
 }
 
 
+/* ---------------------------------------------------------- */
 
 .titulo__maos__solidarias {
     font-weight: 700;
@@ -94,6 +99,7 @@ main {
     font-weight: 450;
     text-align: justify;
 }
+
 
 .lista__doacoes {
     display: grid;
@@ -121,4 +127,123 @@ main {
     color: var(--rosa);
     font-size: 15px;
     font-weight: 600;
+}
+
+
+
+/* --------------------------------------------------------- */
+
+.eventos {
+    text-align: center;
+}
+
+.titulo__lista {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 1.5rem 0rem;
+    text-align: center;
+}
+
+.lista__eventos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2%;
+}
+
+.card__eventos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.shadow {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.card__eventos img {
+    width: 90%;
+    border-radius: 0.3rem;
+}
+
+.titulo__evento {
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    padding: 0.5rem;
+}
+
+.descricao__evento {
+    font-size: 12px;
+    text-align: center;
+}
+
+.botao__doacao {
+    background-color: var(--laranja);
+    width: 60%;
+    padding: 0.4rem 1.5rem;
+    margin: 0.2rem;
+    border-radius: 0.3rem;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+    margin-top: 0.5rem;
+}
+
+.botao__mais {
+    margin: 2rem;
+}
+
+.botao__mais a {
+    font-size: 14px;
+    background-color: var(--laranja);
+    text-decoration: none;
+    color: #fff;
+    padding: 0.4rem 1.5rem;
+    border-radius: 0.3rem;
+}
+
+/* ---------------------------------------------- */
+
+
+.noticias {
+    text-align: center;
+}
+
+.ultimas__noticias {
+    margin-top: 2rem;
+}
+
+
+.grid__noticias {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2%;
+}
+
+.card__noticia {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card__noticia img {
+    width: 90%;
+    border-radius: 0.3rem;
+}
+
+.titulo__noticia {
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 0.8rem;
+    margin-bottom: 1rem;
+}
+
+.data__publicacao__noticia {
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
 }
