--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,35 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width: 50%;
+    background-color: #EBECEE;
+    border-radius: 0.3rem;
+    /* border: 1px solid var(--rosa); */
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
+}
+
+.lista-menu__item {
+    padding: 1rem;
+}
+
+.lista-menu__link {
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration: none;
+    color: var(--rosa);
+}
+
+.container__botao:checked ~.lista-menu {
+    display: block;
+}
+
 
 .container__botao {
     display: none;
